[package]
name = "nsn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
suppaftp = "6.0.1"
colored = "2.1.0"
chrono = "0.4.38"
hex = "0.4.3"
log4rs = "1.3.0"
log = "0.4.21"
ssh2 = "0.9.4"
openssl = { version = "0.10", features = ["vendored"] }
