[package]
name = "nsn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
suppaftp = "6.0.7"
colored = "3.0.0"
chrono = "0.4.39"
hex = "0.4.3"
log4rs = "1.3.0"
log = "0.4.25"
ssh2 = "0.9.5"
openssl = { version = "0.10.70", features = ["vendored"] }
postgres = { version = "0.19.10", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
uuid = { version = "1.13.1", features = ["v4"] }
tempfile = "3.16.0"
mockall = "0.13.1"
sentry = "0.36.0"
whoami = "1.5.2"
serde_json = "1.0.139"
